<resources>
    <string name="app_name">Carros</string>

    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
        <![CDATA[
        <b>Aplicativo dos Carros 2019</b><br>
        Versao %s<br><br>
        <a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
        <a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
        <a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
            ]]>
	</string>
    <string name="about_dialog_title">Livro Android</string>

    <!-- C -->
    <string name="carros">Carros</string>
    <string name="configuracoes">Configurações</string>
    <string name="classicos">Clássicos</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G/4G/5G.</string>

    <!-- L -->
    <string name="luxo">Luxo</string>
    <string name="latitudeLongitude">Lat / Lng</string>

    <!-- M -->
    <string name="mapa">Mapa</string>

    <!-- N -->
    <string name="nav_drawer_username">Ricardo Lecheta</string>
    <string name="nav_drawer_email">rlecheta@gmail.com</string>
    <string name="nome">Nome</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="sobre">Sobre</string>
    <string name="site_do_livro">Site do Livro</string>

    <!-- V -->
    <string name="vazio" />
    <string name="video">Vídeo</string>

    <string name="imagem_do_menu_lateral">Imagem do menu lateral</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="lista_de_carros_aqui">Lista de Carros aqui.</string>
    <string name="imagem_do_carro">Imagem do carro</string>
    <string name="action_editar">Editar</string>
    <string name="action_deletar">Deletar</string>
    <string name="para_simplificar_a_demo">Para simplificar a demo, só podemos enviar o tipo, nome, descrição e a foto do Carro.</string>
    <string name="novo_carro">Novo Carro</string>
    <string name="action_salvar">Salvar</string>
    <string name="msg_error_form_nome">Nome é obrigatório</string>
    <string name="msg_error_form_desc">Descrição é obrigatório</string>
    <string name="msg_confirma_excluir_carro">Confirma excluir este carro?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="favoritos">Favoritos</string>
    <string name="msg_carro_favoritado">Carro adicionado aos favoritos.</string>
    <string name="msg_carro_desfavoritado">Carro removido dos favoritos.</string>
    <string name="download">Download</string>
    <string name="salvando_carro">Salvando o carro, aguarde...</string>
    <string name="API_KEY">AIzaSyDCWAJRS-IkGkvs82xrrZxhn2eTtICW5lw</string>
</resources>
