<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_6"
    android:padding="@dimen/dp_16"
    app:cardUseCompatPadding="false"
    card_view:cardCornerRadius="dp_2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <!-- Tipo -->
        <RadioGroup
            android:id="@+id/radioTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_8"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tipoClassico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/classicos" />

            <RadioButton
                android:id="@+id/tipoEsportivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esportivos" />

            <RadioButton
                android:id="@+id/tipoLuxo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luxo" />
        </RadioGroup>

        <!-- Nome -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/nome"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/tNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <!-- Desc -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/descricao"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/tDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Mais... -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/para_simplificar_a_demo"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
